...

            <LinearLayout
                android:id="@+id/notificationPreferencesHeader"
                android:layout_width="match_parent"
                android:layout_height="88dp"
...

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/optInCoorganizerInvitesSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/optInPrivateInvitesSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/optInWinningNotificationsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/optInOtherNotificationsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/saveNotificationPreferencesButton"
                    android:layout_width="180dp"
                    android:layout_height="62dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/updateInformationHeader"
                android:layout_width="match_parent"
                android:layout_height="88dp"
...

            <ScrollView
                android:id="@+id/updateInformationContentScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/updateNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
...

                    <EditText
                        android:id="@+id/updatePhoneInput"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
...
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/current_password"
                        android:textColor="#111111"
                        android:textSize="18sp"
...

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/saveProfileChangesButton"
                        android:layout_width="180dp"
                        android:layout_height="62dp"
...

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteAccountButton"
            android:layout_width="match_parent"
            android:layout_height="84dp"
...
